[tool.poetry]
name = "pybtex-apa7-style_pb0.25"
version = "0.1.3"
description = "Provides APA7 style for Pybtex. updated for pybtex ^0.25"
readme = "README.md"
authors = [
    "Chris Proctor <github.com@accounts.chrisproctor.net>", 
    "Jürgen Schörflinger <schoerflinger.juergen.5j@kyoto-u.ac.jp",
]
homepage = "https://github.com/attractedtofire/pybtex-apa7-style_pb0.25"
repository = "https://github.com/attractedtofire/pybtex-apa7-style_pb0.25"
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
packages = [
    { include = "formatting" },
    { include = "labels" },
    { include = "names" },
]

[tool.poetry.dependencies]
python = "^3.9"
pybtex = "^0.25"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."pybtex.style.formatting"]
apa7 = "formatting.apa:APAStyle"

[tool.poetry.plugins."pybtex.style.labels"]
apa7 = "labels.apa:LabelStyle"

[tool.poetry.plugins."pybtex.style.names"]
firstlast = "names.firstlast:NameStyle"
